# my_rust_app

./: .editorconfig  .gitignore  .gitlab-ci.yml  BUILD.md  Cargo.toml  LICENSE  Makefile  README.md  local.sh  meson.build  meson_options.txt  my_rust_app.spec  new_project.py
.github/workflows/: ci.yml
build-aux/: dk.rasmil.MyFirstApp.Devel.json  org.mydomain.MyRustApp.Devel.json
data/: dk.rasmil.MyFirstApp.desktop.in.in  dk.rasmil.MyFirstApp.gschema.xml.in  dk.rasmil.MyFirstApp.metainfo.xml.in.in  meson.build  org.mydomain.MyRustApp.desktop.in.in  org.mydomain.MyRustApp.gschema.xml.in  org.mydomain.MyRustApp.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
po/: POTFILES.in  my_rust_app.pot
src/: app.rs  config.rs.in  main.rs  meson.build
src/modals/: about.rs  mod.rs  pref.rs
