[package]
name = "my_rust_app"
version = "0.1.0"
authors = ["Tim Lauridsen <tla@rasmil.dk>"]
edition = "2021"
license = "MIT"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.10", features = ["libadwaita", "gnome_48"] }
tracing = "0.1"
tracing-subscriber = "0.3"
